# otlp-redis-metrics

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
docker/: config.unixsocket.json
include/otlp_redis_metrics/: app.hpp  version.hpp
include/otlp_redis_metrics/config/: config_loader.hpp
include/otlp_redis_metrics/otlp/: metrics_service.hpp  otlp_server.hpp
include/otlp_redis_metrics/redis/: redis_client.hpp  ts_batch_writer.hpp  ts_schema_manager.hpp
include/otlp_redis_metrics/runtime/: bounded_queue.hpp  shutdown.hpp
include/otlp_redis_metrics/transform/: label_policy.hpp  metric_point.hpp  metric_transformer.hpp  series_keyer.hpp
proto/otlp_redis_metrics/: config.proto
src/: app.cpp  main.cpp
src/config/: config_loader.cpp
src/otlp/: metrics_service.cpp  otlp_server.cpp
src/redis/: redis_client.cpp  ts_batch_writer.cpp  ts_schema_manager.cpp
src/transform/: label_policy.cpp  metric_transformer.cpp  series_keyer.cpp
